Alterações nas telas e como funcionam

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <base href="/">
-  <title>App</title>
+  <title>React Sample</title>
 </head>
 
-<body>
-  <section id="root"></section>
+<body id='root'>
 </body>
 
 </html>
